@@ -2,6 +2,8 @@ Revision 4.2.3
 --------------
 
 - Fix to libsmi2pysnmp tool to make it working again in Python < 2.7
+- MibTree.readTest[Get]Next() reworked to be called uniformely so
+  user could tap on these methods at any level of the MIB tree.
 
 Revision 4.2.2
 --------------
